# PasoSalsa

./: .gitignore  README.md  pyproject.toml
doc/: TODO.md
src/pasosalsa/: figures.py
src/pasosalsa/abstraction/: figuras.py  movement.py
src/pasosalsa/application/computation/: sequencing.py
src/pasosalsa/application/visualisers/: ascii.py  general.py  tikz.py
src/pasosalsa/domain/abstracts/: composition.py  figuras.py  movement.py  patterns.py  sequence.py  simulation.py
src/pasosalsa/domain/instances/: figuras.py  movement.py  posiciones.py
src/pasosalsa/domain/instances/salsa/: figuras.py  posiciones.py
src/pasosalsa/instances/: figuras.py  movement.py
src/pasosalsa/usage/: sequencer.py
src/pasosalsa/util/: iterables.py
src/pasosalsa/visualisers/: ascii.py  general.py  tikz.py
tst/: ascii.py  compatibility.py  guapea.py  tikz.py
