[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "pasosalsa"
version = "2024.12.02"
description = "PasoSalsa: Create diagrams for salsa figures (steps and motions)."
keywords = ["dance", "dancing", "salsa"]

requires-python = ">= 3.10"
authors = [{name = "Thomas Bauwens", email = "thomas.bauwens@kuleuven.be"}]
maintainers = [{name = "Thomas Bauwens", email = "thomas.bauwens@kuleuven.be"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

dependencies = []
